--- a/firstLAB/main.html
+++ b/firstLAB/main.html
@@ -10,8 +10,8 @@
 <body>
 
     <header class="navbar">
-        <div class="floating-obj logo">
-            <img src="myfonts\logoip.jpg" alt="logo"/>
+        <div class="logo">
+            <img src="myfonts\logoС.svg" alt="logo"/>
         </div>
 
         <nav class="menu">
