--- a/firstLAB/main.html
+++ b/firstLAB/main.html
@@ -16,8 +16,8 @@
 
         <nav class="menu">
             <a href="#" class="active">HOME</a>
-            <a href="#">SHOP</a>
-            <a href="#">ABOUT</a>
+            <a href="#" class="inactive">SHOP</a>
+            <a href="#" class="inactive">ABOUT</a>
         </nav>
 
         
