--- a/firstLAB/main.html
+++ b/firstLAB/main.html
@@ -18,6 +18,7 @@
             <a href="#" class="active">HOME</a>
             <a href="#" class="inactive">SHOP</a>
             <a href="#" class="inactive">ABOUT</a>
+            <a href="signIn.php">SIGN</a>
         </nav>
 
         
